# ur5_gripper_control

./: CMakeLists.txt  README.md  package.xml
config/: ros_controllers.yaml  sensors_3d.yaml  ur5.srdf
img/: example_movement.webm
launch/: control_nodes.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  ur5_moveit_sensor_manager.launch.xml  warehouse.launch
scripts/: pick_place.py  publish_octomap_cloud.py
src/: pick_place.cpp
srv/: FilterWorkspace.srv
universal_robot/ur_description/urdf/: ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
ur5_control/: CMakeLists.txt  package.xml
ur5_control/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro
ur5_gripper_moveit_config/config/: ros_controllers.yaml
ur5_gripper_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  moveit.rviz
ur5_gripper_moveit_config/worlds/: world.world
urdf/: _d435.urdf.xacro  cube_red.urdf  robotiq_85_gripper.urdf.xacro  stereo_camera.urdf.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro  wge100_camera.gazebo.xacro  wge100_camera.urdf.xacro
worlds/: world.world
